# task_2_Rune

./: CMakeLists.txt  Rune_main.cpp
