cmake_minimum_required(VERSION 3.7)
project(task_2)
find_package(OpenCV REQUIRED)
set(opencv_include /usr/local/include/opencv4)
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
include_directories(${opencv_include})
link_directories(/usr/local/lib)
add_executable(Rune Rune_main.cpp)
target_link_libraries(Rune ${OpenCV_LIBS})
